forms & toques finais

--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
 			
 			<!-- talvez reconstrua essa parte usando display: grid; -->
 
-			<h1 class="titulo-principal">
+			<h1 class="titulo-mauve extra-padding-bottom">
 				TIPOS DE VIOLÊNCIA
-			
+			</h1>
+
 			<div class="grid">
 				<div class="frame">
 					<h1 class="titulo-mauve">
