--- a/join.html
+++ b/join.html
@@ -34,15 +34,13 @@
 			</h1>	
 			
 
-			<p class="paragrafo-m">
+			<p class="subtitulo-principal">
 				Participe de nossos núcleos de estudos<br>
-                e ações para promover o bem estar das mulheres<br>
-
+				e ações para promover o bem estar das mulheres<br>
 			</p>
+		<div>
 
-            <div>
-
-                <form action="https://github.com/" target="_blank" method="post">
+                <form action="join.html">
                     <label for="nome" id="lbl_text">Nome:</label>
                     <input type="text" id="in_name" placeholder="Digite seu nome" required/>
         
@@ -52,10 +50,11 @@
                     <label for="fone" id="lbl_text">Fone:</label>
                     <input type="text" id="in_phone" placeholder="Digite seu telefone" required/>
         
-                    <input type="submit" class="send_input_button" value="Cadastrar">
+                    <input type="submit" class="send-input-button" value="Cadastrar">
                 </form>   
 	</div>	
 </body>
+
 <footer>
 	<div class="section-branca">
 		<p class="paragrafo-m-inv">
@@ -79,4 +78,5 @@
 		</div>
 	</div>
 </footer>
+
 </html>
