--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 				Visamos um futuro onde todas as mulheres vivam livres de violência, com acesso a recursos que promovam sua autonomia, dignidade e igualdade. 
 				<br>
 				<br>
-				 A missão da (nome da nossa ong aq) é promover a igualdade de gênero e a proteção das mulheres através da conscientização e do suporte jurídico.
+				 A missão da Fala Segura é promover a igualdade de gênero e a proteção das mulheres através da conscientização e do suporte jurídico.
 				Buscamos oferecer informações claras e acessíveis sobre os direitos das mulheres e as legislações pertinentes, enfatizando a Lei Maria da Penha como um instrumento essencial na luta contra a violência doméstica e o feminicídio.
 			</p>
 		</div>
